--- a/src/index.css
+++ b/src/index.css
@@ -33,9 +33,9 @@ a:hover {
 
 body {
     display: flex;
-
-    place-items: center;
-    min-width: 320px;
+    justify-content: center;
+    align-items: center;
+    min-width: 100vh;
     min-height: 100vh;
 }
 
@@ -47,25 +47,6 @@ h1 {
 button {
     margin: 10px;
 }
-
-/*button {*/
-/*  border-radius: 8px;*/
-/*  border: 1px solid transparent;*/
-/*  padding: 0.6em 1.2em;*/
-/*  font-size: 1em;*/
-/*  font-weight: 500;*/
-/*  font-family: inherit;*/
-/*  background-color: #1a1a1a;*/
-/*  cursor: pointer;*/
-/*  transition: border-color 0.25s;*/
-/*}*/
-/*button:hover {*/
-/*  border-color: #646cff;*/
-/*}*/
-/*button:focus,*/
-/*button:focus-visible {*/
-/*  outline: 4px auto -webkit-focus-ring-color;*/
-/*}*/
 
 @media (prefers-color-scheme: light) {
     :root {
