--- a/src/radix/radix-tooltip.css
+++ b/src/radix/radix-tooltip.css
@@ -31,8 +31,7 @@ button {
 
 .TooltipArrow {
     fill: #262626;
-    height: 10px;
-    /*width: 15px;*/
+    width: 15px;
     /*border-radius: 20px;*/
     /*clip-path: polygon(0% 100%, 100% 110%, 100% 90%);*/
 
